<resources>
    <string name="app_name">"Clean Water Crowdsourcing"</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_activity_registration">Registration</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="welcome_to_kgt">Welcome to kGT!</string>
    <string name="login">Login</string>
    <string name="registration">registration</string>
    <string name="cancel">Cancel</string>
    <string name="kgt_login_page">kGT Login page</string>
    <string name="kgt">kGT</string>
    <string name="ok">OK</string>
    <string name="password">password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="submit">submit</string>
    <string name="kgt_splash">kGT</string>
    <string name="title_activity_login_fire_base">LoginFireBase</string>
    <string name="auth_failed" />
    <string name="title_activity_home__worker_">Home_Worker_Activity</string>
    <string name="title_activity_water_availability">Map</string>
    <string name="title_activity_purity_report_map">Map</string>
    <string name="water_purity_report">Water Purity Report:</string>
    <string name="report_number">Report Number:</string>
    <string name="name_of_worker">Name of Worker:</string>
    <string name="location_of_water">Location of Water:</string>
    <string name="virus_ppm">Virus PPM:</string>
    <string name="date_and_time">Date and Time:</string>
    <string name="textview">TextView</string>
    <string name="overall_condition">Overall Condition:</string>
    <string name="water_source_report">Water Source Report:</string>
    <string name="name_of_reporter">Name of Reporter:</string>
    <string name="condition_of_water">Condition of Water:</string>
    <string name="type_of_water">Type of Water:</string>
    <string name="logout">Logout</string>
    <string name="contaminant_ppm">Contaminant PPM:</string>
    <string name="choose_location">Choose location:</string>
    <string name="ppm_type">PPM type:</string>
    <string name="next">Next</string>
    <string name="year">Year:</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="change">Change</string>
    <string name="username">username</string>
    <string name="name">name</string>
    <string name="email">email</string>
    <string name="address">address</string>
    <string name="sign_in">SIGN IN</string>
    <string name="loading">Loading...</string>
    <string name="view_purity_reports">View Purity Reports</string>
    <string name="select_report">Select Report</string>
    <string name="back">Back</string>
    <string name="view">View</string>
    <string name="view_availability_reports">View Availability Reports</string>
    <string name="select_location">Select Location</string>
    <string name="select_water_condition">Select Water Condition</string>
    <string name="location">Location</string>
    <string name="enter_location">Enter Location</string>
    <string name="clean_water_crowdsourcing">Clean Water Crowdsourcing</string>
    <string name="hello_joon_user">Hello, Joon(User)</string>
    <string name="sign_out">Sign out</string>
    <string name="edit">edit</string>
    <string name="water_availability_map">Water Availability Map</string>
    <string name="view_available_water_sources">view available water sources</string>
    <string name="submit_a_report_on_water_availability">submit a report on water availability</string>
    <string name="submit_water_quality_report">submit water quality report</string>
    <string name="view_water_quality_report">View Water Quality Report</string>
    <string name="historical_purity_report">Historical Purity Report</string>
    <string name="home_address">Home Address</string>
    <string name="email_address">Email Address</string>
    <string name="usertype">UserType</string>
    <string name="register">Register</string>
</resources>

