<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@mipmap/ocean"
    android:alpha=".8"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.frys.waters.controllers.RegWorkerActivity">

    <TextView
        android:text="@string/kgt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView8"
        android:fontFamily="cursive"
        android:textSize="60sp"
        android:textColor="#fff2e2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp" />

    <TextView
        android:text="@string/clean_water_crowdsourcing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView10"
        android:textSize="17sp"
        android:textColor="#fff2e2"
        android:layout_below="@+id/textView8"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/_hello"
        android:text="@string/hello_joon_user"
        android:contentDescription="@string/bottom_sheet_behavior"
        android:textColor="#fff2e2"
        android:textAllCaps="false"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginStart="11dp" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/_signout"
        android:text="@string/sign_out"
        android:contentDescription="@string/bottom_sheet_behavior"
        android:textColor="#fff2e2"
        android:textAllCaps="false"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:text="@string/edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/_edit"
        android:textColor="#fff2e2"
        android:layout_alignParentTop="true"
        android:layout_alignEnd="@+id/textView10" />

    <Button
        android:id="@+id/worker_waterAvailabilityMapButton"
        android:alpha=".9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/water_availability_map"
        android:layout_below="@+id/worker_submitWaterSource"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/worker_viewWaterSource"
        android:alpha=".9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/view_available_water_sources"
        android:layout_below="@+id/textView10"
        android:layout_alignParentStart="true"
        android:layout_marginTop="22dp" />

    <Button
        android:id="@+id/worker_submitWaterSource"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:alpha=".9"
        android:text="@string/submit_a_report_on_water_availability"
        android:layout_below="@+id/worker_viewWaterSource"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/worker_waterQualityReportButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit_water_quality_report"
        android:alpha=".9"
        android:layout_below="@+id/worker_waterAvailabilityMapButton"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />

</RelativeLayout>