<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#e0d8c9"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.frys.waters.controllers.WaterPurityReportActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/water_purity_report" />

    <LinearLayout
        android:layout_width="400dp"
        android:layout_height="400dp"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="26dp">

        <LinearLayout
            android:layout_width="177dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="1">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/date_and_time"
                android:textColor="#7e9ab7" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/report_number"
                android:textColor="#7e9ab7" />

            <TextView
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/name_of_worker"
                android:textColor="#7e9ab7" />

            <TextView
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/location_of_water"
                android:textColor="#7e9ab7" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/overall_condition"
                android:textColor="#7e9ab7" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/virus_ppm"
                android:textColor="#7e9ab7" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.40"
                android:textColor="#7e9ab7"
                android:text="@string/contaminant_ppm" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="177dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="1">

            <TextView
                android:id="@+id/_dateAndTimeText"
                android:layout_width="match_parent"
                android:layout_height="50dp" />

            <TextView
                android:id="@+id/_reportNumberText"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:ems="10"/>

            <TextView
                android:id="@+id/_workerNameEdit"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:ems="10"/>

            <Button
                android:id="@+id/locationButton2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select_location"
                android:layout_weight="0.10" />

            <Spinner
                android:id="@+id/_overallConditionSpinner"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:ems="10"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/_virusPPMEdit"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:ems="10"
                android:labelFor="@+id/virusPPMEdit"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/_contaminantPPMEdit"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:ems="10"
                android:labelFor="@+id/contaminantPPMEdit"
                android:inputType="textPersonName" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/submitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:layout_marginStart="41dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/cancelButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="58dp"
        android:text="@string/cancel" />
</RelativeLayout>
