<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_actual_source_report"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:background="#e0d8c9"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.frys.waters.controllers.ActualSourceReportActivity">

    <TextView
        android:text="@string/water_source_report"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:textColor="#7e9ab7"
        android:id="@+id/textView3"
        android:textSize="25sp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="@string/report_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="23dp"
        android:id="@+id/textView5"
        android:layout_below="@+id/textView4"
        android:layout_alignStart="@+id/textView4" />

    <TextView
        android:text="@string/name_of_reporter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:id="@+id/textView7"
        android:layout_below="@+id/textView5"
        android:layout_alignStart="@+id/textView5" />

    <TextView
        android:text="@string/location_of_water"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView7"
        android:layout_alignStart="@+id/textView7"
        android:layout_marginTop="24dp"
        android:id="@+id/textView9" />

    <TextView
        android:text="@string/condition_of_water"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView13"
        android:layout_alignStart="@+id/textView13"
        android:layout_marginTop="24dp"
        android:id="@+id/textView15" />

    <TextView
        android:text="@string/date_and_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="39dp"
        android:id="@+id/textView4"
        android:layout_below="@+id/textView3"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/actualDateAndTimeTextView"
        android:layout_above="@+id/textView5"
        android:layout_toEndOf="@+id/textView15"
        android:layout_marginStart="44dp" />

    <TextView
        android:text="@string/textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/reporterNumberTextView"
        android:layout_above="@+id/textView7"
        android:layout_alignStart="@+id/actualDateAndTimeTextView" />

    <TextView
        android:text="@string/textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/reporterNameTextView"
        android:layout_above="@+id/textView9"
        android:layout_alignStart="@+id/reporterNumberTextView" />

    <TextView
        android:text="@string/textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView9"
        android:layout_alignStart="@+id/textView9"
        android:layout_marginTop="24dp"
        android:id="@+id/LocationOfWaterTextView" />

    <TextView
        android:text="@string/type_of_water"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:id="@+id/textView13"
        android:layout_below="@+id/LocationOfWaterTextView"
        android:layout_alignStart="@+id/LocationOfWaterTextView" />

    <TextView
        android:text="@string/textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/typeOfWaterTextView"
        android:layout_above="@+id/textView15"
        android:layout_alignStart="@+id/reporterNameTextView" />

    <TextView
        android:text="@string/textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/conditionOfWaterTextView"
        android:layout_alignBaseline="@+id/textView15"
        android:layout_alignBottom="@+id/textView15"
        android:layout_alignStart="@+id/typeOfWaterTextView" />

    <Button
        android:text="@string/ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="56dp"
        android:id="@+id/OKbutton"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
