<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_registration"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.frys.waters.controllers.Registration"
    tools:showIn="@layout/activity_registration">

    <TextView
        android:text="@string/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginStart="11dp"
        android:id="@+id/nameTextView" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:labelFor="@+id/nameEditText"
        android:layout_below="@+id/nameTextView"
        android:layout_alignStart="@+id/nameTextView"
        android:id="@+id/nameEditText" />

    <TextView
        android:text="@string/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/nameEditText"
        android:layout_alignStart="@+id/nameEditText"
        android:id="@+id/UsernameTextView" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:labelFor="@+id/usernameEditText"
        android:id="@+id/usernameEditText"
        android:layout_below="@+id/UsernameTextView"
        android:layout_alignStart="@+id/UsernameTextView" />

    <TextView
        android:text="@string/password"
        android:labelFor="@+id/passwordEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/usernameEditText"
        android:layout_alignStart="@+id/usernameEditText"
        android:id="@+id/passwordTextView" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/passwordEditText"
        android:layout_below="@+id/passwordTextView"
        android:layout_alignStart="@+id/passwordTextView" />

    <TextView
        android:text="@string/confirm_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/passwordEditText"
        android:layout_alignStart="@+id/passwordEditText"
        android:id="@+id/confirmTextView" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:labelFor="@+id/confirmEditText"
        android:id="@+id/confirmEditText"
        android:layout_below="@+id/confirmTextView"
        android:layout_alignStart="@+id/confirmTextView" />

    <TextView
        android:text="@string/home_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/addressTextView"
        android:layout_below="@+id/confirmEditText"
        android:layout_alignStart="@+id/confirmEditText" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPostalAddress"
        android:ems="10"
        android:labelFor="@+id/addressEditText"
        android:id="@+id/addressEditText"
        android:layout_below="@+id/addressTextView"
        android:layout_alignStart="@+id/addressTextView" />

    <TextView
        android:text="@string/email_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/emailTextView"
        android:layout_below="@+id/addressEditText"
        android:layout_alignStart="@+id/addressEditText" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:labelFor="@+id/emailEditText"
        android:id="@+id/emailEditText"
        android:layout_below="@+id/emailTextView"
        android:layout_alignStart="@+id/emailTextView" />

    <TextView
        android:text="@string/usertype"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/typeTextView"
        android:layout_below="@+id/emailEditText"
        android:layout_alignStart="@+id/emailEditText" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spinner"
        android:layout_below="@+id/typeTextView"
        android:layout_alignParentStart="true" />

    <Button
        android:text="@string/cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:id="@+id/RegisterCancel"
        android:layout_below="@+id/spinner"
        android:layout_toEndOf="@+id/registerButton" />

    <Button
        android:text="@string/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/registerButton"
        android:layout_below="@+id/spinner"
        android:layout_toEndOf="@+id/nameTextView"
        android:layout_marginStart="11dp" />

</RelativeLayout>
