<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#e0d8c9"
    tools:context="com.example.frys.waters.controllers.ChoosePurityYearActivity">


    <TextView
        android:id="@+id/textView21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#7e9ab7"
        android:text="@string/year"
        android:layout_marginTop="15dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginStart="17dp" />

    <Spinner
        android:id="@+id/yearSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView21"
        android:layout_alignParentStart="true"
        android:layout_marginTop="22dp" />

    <Button
        android:id="@+id/submitButton_choose1"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="38dp"
        android:layout_marginStart="11dp"
        android:layout_toLeftOf="@+id/cancelButton_choose"
        android:layout_toEndOf="@+id/textView21"
        android:text="@string/submit" />

    <Button
        android:id="@+id/cancelButton_choose"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:text="@string/cancel"
        android:layout_alignBaseline="@+id/submitButton_choose1"
        android:layout_alignBottom="@+id/submitButton_choose1"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="64dp" />
</RelativeLayout>
