<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFB8734A"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.frys.waters.controllers.WelcomeScreen">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_to_kgt"
        android:id="@+id/textView"
        android:textSize="25sp"
        android:textColor="@android:color/holo_orange_light" />

    <Button
        android:text="@string/registration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="29dp"
        android:id="@+id/bt_reg"
        android:textSize="30sp"
        android:textColor="@android:color/holo_orange_light"
        android:layout_below="@+id/imageView"
        android:layout_centerHorizontal="true" />

    <ImageView
        app:srcCompat="@drawable/logo"
        android:id="@+id/imageView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="109dp" />

    <Button
        android:text="@string/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/bt_login"
        android:textSize="30sp"
        android:textColor="@android:color/holo_orange_light"

        android:layout_marginTop="18dp"
        android:layout_below="@+id/bt_reg"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
